--- a/NewsWebSite/Web.config
+++ b/NewsWebSite/Web.config
@@ -12,6 +12,8 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NewsWebSite-20170115063838.mdf;Initial Catalog=aspnet-NewsWebSite-20170115063838;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="NHibernateConfig" value="~\Models\NHibernate\Nhibernate.cfg.xml"/>
+    <add key="UserImagesFolder" value="~/Content/UserImages/"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
